--- a/templates/pets/add_task.html
+++ b/templates/pets/add_task.html
@@ -2,60 +2,71 @@
 {% load static %}
 {% block title %}Add a New Task{% endblock %}
 {% block content %}
-    <h2>Add a New Task</h2>
-    <form method="POST">
+    <form class="block-layout" method="POST">
+        <h2>Add a New Task</h2>
         {% csrf_token %}
         {{ form.non_field_errors }}
 
-        <div>
-            {{ form.pet.label_tag }} {{ form.pet }}
-            {{ form.pet.errors }}
+        <div class="row-form-input-block">
+            <div class="form-input-block" style="flex-grow: 1">
+                {{ form.pet.label_tag }}
+                {{ form.pet }}
+                {{ form.pet.errors }}
+            </div>
+
+            <div class="form-input-block" style="flex-grow: 1">
+                {{ form.category.label_tag }}
+                {{ form.category }}
+                {{ form.category.errors }}
+            </div>
         </div>
 
-        <div>
-            {{ form.category.label_tag }} {{ form.category }}
-            {{ form.category.errors }}
-        </div>
-
-        <div>
-            {{ form.new_category.label_tag }} {{ form.new_category }}
+        <div id="new_category_div" class="form-input-block" style="margin-top: -1em">
+            {{ form.new_category }}
             {{ form.new_category.errors }}
-            <small>{{ form.new_category.help_text }}</small>
         </div>
 
-        <div>
-            {{ form.data.label_tag }} {{ form.data }}
-            {{ form.data.errors }}
-        </div>
-
-        <div>
-            {{ form.comments.label_tag }} {{ form.comments }}
+        <div class="form-input-block">
+            {{ form.comments.label_tag }}
+            {{ form.comments }}
             {{ form.comments.errors }}
         </div>
 
-        <div>
-            {{ form.start_date.label_tag }} {{ form.start_date }}
+        <div class="form-input-block">
+            {{ form.start_date.label_tag }}
+            {{ form.start_date }}
             {{ form.start_date.errors }}
         </div>
 
-        <div>
+
+        <div class="form-input-block">
             <p>{{ form.frequently.label_tag }}</p>
-            {{ form.frequently }}
+            <div class="day-selector">
+                {% for day in form.frequently.field.choices %}
+                    <label class="day-button">
+                        <input type="checkbox" name="frequently" value="{{ day.0 }}">
+                        <span>{{ day.1|slice:":1" }}</span> <!-- Display only the first letter of the day -->
+                    </label>
+                {% endfor %}
+            </div>
             {{ form.frequently.errors }}
         </div>
-        
-        <div>
-            {{ form.end_date.label_tag }} {{ form.end_date }}
-            {{ form.end_date.errors }}
+
+        <div class="row-form-input-block">
+            <div class="form-input-block" style="flex-grow: 1">
+                {{ form.end_date.label_tag }}
+                {{ form.end_date }}
+                {{ form.end_date.errors }}
+            </div>
+
+            <div class="form-input-block toggle-checkbox" style="margin-top: auto">
+                {{ form.important }}
+                {{ form.important.label_tag }}
+            </div>
         </div>
 
-        <div>
-            {{ form.important.label_tag }} {{ form.important }}
-            {{ form.important.errors }}
-        </div>
-
-        <button type="submit">Add Task</button>
+        <button type="submit" class="primary-button">Add Task</button>
     </form>
-    
+
     <script src="{% static 'js/add_task.js' %}"></script>
 {% endblock %}
