--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -1,10 +1,42 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h2>Register</h2>
-  <form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Register</button>
-  </form>
+    <form class="block-layout" method="POST">
+        <h2>Register</h2>
+        {% csrf_token %}
+        <div class="form-input-block">
+            {{ form.username.label_tag }}
+            {{ form.username }}
+            {{ form.username.errors }}
+        </div>
+
+        <div class="form-input-block">
+            {{ form.first_name.label_tag }}
+            {{ form.first_name }}
+            {{ form.first_name.errors }}
+        </div>
+
+        <div class="form-input-block">
+            {{ form.last_name.label_tag }}
+            {{ form.last_name }}
+            {{ form.last_name.errors }}
+        </div>
+
+        <div class="form-input-block">
+            {{ form.password1.label_tag }}
+            {{ form.password1 }}
+            {{ form.password1.errors }}
+        </div>
+
+        {{ form.password1.help_text }}
+
+        <div class="form-input-block">
+            {{ form.password2.label_tag }}
+            {{ form.password2 }}
+            {{ form.password2.errors }}
+        </div>
+        
+        <button class="primary-button" type="submit">Register</button>
+        <p class="login-register-instead">Already Have an account? <a href="{% url 'login' %}">Log in instead</a></p>
+    </form>
 {% endblock %}
