--- a/static/css/buttons.css
+++ b/static/css/buttons.css
@@ -17,3 +17,11 @@ button {
     border-radius: 0.3em;
     font-weight: 600;
 }
+
+.accent-1-button {
+    background-color: transparent;
+     color: var(--accent-1-1);
+    border: 0.1em solid var(--accent-1-2);
+    border-radius: 0.3em;
+    font-weight: 600;
+}
