--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,22 +7,31 @@
 }
 
 body {
+    width: 100vw;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
     background-color: #f5f5f5;
 }
 
 h1, h2, h3, h4, h5, h6, p, span, ul, li {
+    color: var(--text-color);
     padding: 0;
     margin: 0;
 }
-
-p {
-    margin: 0;
-    padding: 0;
+svg {
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 
 .block-layout {
     display: flex;
     flex-direction: column;
-    gap: 2em;
+    gap: 3em;
     margin: 3em var(--page-margin);
+}
+
+a:has(button) {
+    text-decoration: none;
 }
