--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -1,18 +1,16 @@
 nav {
     display: flex;
     flex-direction: row;
+    align-items: center;
     padding: 2em var(--page-margin) 0.5em var(--page-margin);
 }
 
 nav #back-button {
-    width: 3em;
-    height: 3em;
+    width: 2em;
+    height: 2em;
 }
 
 nav #back-button > svg {
-    width: 100%;
-    height: 100%;
-    position: relative;
     fill: var(--grey-2);
 }
 
