--- a/static/css/toggle.css
+++ b/static/css/toggle.css
@@ -14,12 +14,12 @@
     justify-content: center;
 
     padding: 0.5em 0.8em;
-    border: 0.1em solid var(--grey-3); /* Border color */
+    border: 0.1em solid var(--grey-3);
     border-radius: 0.2em;
 }
 
 .toggle-checkbox input[type="checkbox"]:checked + label {
     background-color: var(--color-1);
-    border: none;
+    border-color: var(--color-1);
     font-weight: 700;
 }
