--- a/templates/pets/task_form.html
+++ b/templates/pets/task_form.html
@@ -3,7 +3,7 @@
 {% block title %}Add a New Task{% endblock %}
 {% block content %}
     <form class="block-layout" method="POST">
-        <h2>Add a New Task</h2>
+        <h2>{% if is_update %}Update{% else %}Add a New{% endif %} Task</h2>
         {% csrf_token %}
         {{ form.non_field_errors }}
 
@@ -27,17 +27,10 @@
         </div>
 
         <div class="form-input-block">
-            {{ form.comments.label_tag }}
-            {{ form.comments }}
-            {{ form.comments.errors }}
-        </div>
-
-        <div class="form-input-block">
             {{ form.start_date.label_tag }}
             {{ form.start_date }}
             {{ form.start_date.errors }}
         </div>
-
 
         <div class="form-input-block">
             <p>{{ form.frequently.label_tag }}</p>
@@ -45,11 +38,23 @@
                 {% for day in form.frequently.field.choices %}
                     <label class="day-button">
                         <input type="checkbox" name="frequently" value="{{ day.0 }}">
-                        <span>{{ day.1|slice:":1" }}</span> <!-- Display only the first letter of the day -->
+                        <span>{{ day.1|slice:":1" }}</span>
                     </label>
                 {% endfor %}
             </div>
             {{ form.frequently.errors }}
+        </div>
+
+        <div class="form-input-block">
+            {{ form.data.label_tag }}
+            {{ form.data }}
+            {{ form.data.errors }}
+        </div>
+
+        <div class="form-input-block">
+            {{ form.comments.label_tag }}
+            {{ form.comments }}
+            {{ form.comments.errors }}
         </div>
 
         <div class="row-form-input-block">
@@ -65,7 +70,13 @@
             </div>
         </div>
 
-        <button type="submit" class="primary-button">Add Task</button>
+        <button type="submit" class="primary-button">{% if is_update %}Update{% else %}Add{% endif %} Task</button>
+
+        {% if is_update %}
+            <a style="display: flex" href="{% url 'delete_task' task.id %}"
+               onclick="return confirm('Are you sure you want to delete this task?');">
+                <button style="flex-grow: 1" type="button" class="accent-1-button">Delete Task</button></a>
+        {% endif %}
     </form>
 
     <script src="{% static 'js/add_task.js' %}"></script>
