--- a/static/css/buttons.css
+++ b/static/css/buttons.css
@@ -25,3 +25,11 @@ button {
     border-radius: 0.3em;
     font-weight: 600;
 }
+
+.icon-button {
+    width: 2.5em;
+    height: 2.5em;
+    background-color: transparent;
+    border: none;
+    font-weight: 700;
+}
