--- a/templates/pets/task_form.html
+++ b/templates/pets/task_form.html
@@ -37,7 +37,8 @@
             <div class="day-selector">
                 {% for day in form.frequently.field.choices %}
                     <label class="day-button">
-                        <input type="checkbox" name="frequently" value="{{ day.0 }}">
+                        <input type="checkbox" name="frequently" value="{{ day.0 }}"
+                               {% if day.0 in form.frequently.value %}checked{% endif %}>
                         <span>{{ day.1|slice:":1" }}</span>
                     </label>
                 {% endfor %}
@@ -75,7 +76,8 @@
         {% if is_update %}
             <a style="display: flex" href="{% url 'delete_task' task.id %}"
                onclick="return confirm('Are you sure you want to delete this task?');">
-                <button style="flex-grow: 1" type="button" class="accent-1-button">Delete Task</button></a>
+                <button style="flex-grow: 1" type="button" class="accent-1-button">Delete Task</button>
+            </a>
         {% endif %}
     </form>
 
