--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,3 @@
-:root {
-    font-size: 2.5rem;
-}
-
 * {
     font-family: sans-serif;
 }
@@ -19,6 +15,7 @@ h1, h2, h3, h4, h5, h6, p, span, ul, li {
     padding: 0;
     margin: 0;
 }
+
 svg {
     width: 100%;
     height: 100%;
@@ -34,4 +31,14 @@ svg {
 
 a:has(button) {
     text-decoration: none;
+}
+
+:root {
+    font-size: 1rem;
+}
+
+@media (min-width: 600px) {
+    :root {
+        font-size: 1rem;
+    }
 }
