--- a/templates/home.html
+++ b/templates/home.html
@@ -35,6 +35,7 @@
                 </li>
             </ul>
         </div>
+<button id="enable-notifications">Enable Notifications</button>
 
     </div>
     <script>
