--- a/templates/pets/task_form.html
+++ b/templates/pets/task_form.html
@@ -75,12 +75,17 @@
             </div>
         </div>
 
-        <button type="submit" class="primary-button">{% if is_update %}Update{% else %}Add{% endif %} Task</button>
+        <button type="submit" class="primary-button" {% if is_update %}onclick="logUserAction('update_task')"
+                {% else %}onclick="logUserAction('save_task')"{% endif %}>{% if is_update %}Update{% else %}
+            Save{% endif %} Task
+        </button>
 
         {% if is_update %}
             <a style="display: flex" href="{% url 'delete_task' task.id %}"
                onclick="return confirm('Are you sure you want to delete this task?');">
-                <button style="flex-grow: 1" type="button" class="accent-1-button">Delete Task</button>
+                <button style="flex-grow: 1" type="button" class="accent-1-button"
+                        onclick="logUserAction('delete_task')">Delete Task
+                </button>
             </a>
         {% endif %}
     </form>
