--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="{% static 'css/pet-profile.css' %}">
     <link rel="stylesheet" href="{% static 'css/task-list.css' %}">
     <link rel="stylesheet" href="{% static 'css/pet-list.css' %}">
+    
+    <title>Timos</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <nav>
