--- a/templates/home.html
+++ b/templates/home.html
@@ -48,36 +48,36 @@
             setupEvents(date);
             updateDateDisplay(date);
 
-            const enableNotificationsBtn = document.getElementById('enable-notifications');
-            enableNotificationsBtn.addEventListener('click', async () => {
-                // Now this is triggered by a user gesture
-                const permission = await Notification.requestPermission();
-                if (permission !== 'granted') {
-                    console.log('Notification permission not granted.');
-                    return;
-                }
-
-                // Proceed with service worker registration and subscription
-                const registration = await navigator.serviceWorker.register('static/js/service-worker.js');
-                const vapidPublicKey = "BHZew5RS_iHtJQhNfa9ALccaWy76vbAzkDSo6gQ8PtP5bJjYOr8RuWXjE0mk-Qj-O5EuE7Kur9-dj_HkKGjxMas";
-                const convertedKey = urlBase64ToUint8Array(vapidPublicKey);
-                const swRegistration = await navigator.serviceWorker.ready;
-                const subscription = await swRegistration.pushManager.subscribe({
-                    userVisibleOnly: true,
-                    applicationServerKey: convertedKey
-                });
-
-                console.log("Subscription:", subscription);
-
-                await fetch('/users/save_subscription/', {
-                    method: 'POST',
-                    headers: {
-                        'X-CSRFToken': getCSRFToken(),
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({subscription: subscription})
-                });
-            });
+            {#const enableNotificationsBtn = document.getElementById('enable-notifications');#}
+            {#enableNotificationsBtn.addEventListener('click', async () => {#}
+            {#    // Now this is triggered by a user gesture#}
+            {#    const permission = await Notification.requestPermission();#}
+            {#    if (permission !== 'granted') {#}
+            {#        console.log('Notification permission not granted.');#}
+            {#        return;#}
+            {#    }#}
+            {##}
+            {#    // Proceed with service worker registration and subscription#}
+            {#    const registration = await navigator.serviceWorker.register('static/js/service-worker.js');#}
+            {#    const vapidPublicKey = "BHZew5RS_iHtJQhNfa9ALccaWy76vbAzkDSo6gQ8PtP5bJjYOr8RuWXjE0mk-Qj-O5EuE7Kur9-dj_HkKGjxMas";#}
+            {#    const convertedKey = urlBase64ToUint8Array(vapidPublicKey);#}
+            {#    const swRegistration = await navigator.serviceWorker.ready;#}
+            {#    const subscription = await swRegistration.pushManager.subscribe({#}
+            {#        userVisibleOnly: true,#}
+            {#        applicationServerKey: convertedKey#}
+            {#    });#}
+            {##}
+            {#    console.log("Subscription:", subscription);#}
+            {##}
+            {#    await fetch('/users/save_subscription/', {#}
+            {#        method: 'POST',#}
+            {#        headers: {#}
+            {#            'X-CSRFToken': getCSRFToken(),#}
+            {#            'Content-Type': 'application/json'#}
+            {#        },#}
+            {#        body: JSON.stringify({subscription: subscription})#}
+            {#    });#}
+            {# });#}
         });
 
         function setupAddPet() {
